@@ -381,6 +381,27 @@ static const char *set_balancer_param(proxy_server_conf *conf,
         else
             return "scolonpathdelim must be On|Off";
     }
+    else if (!strcasecmp(key, "erroronstatus")) {
+        char valSplit[strlen(val)+1];
+        char *status;
+        char *tok_state;
+
+        strcpy(valSplit, val);
+        balancer->errstatuses = apr_array_make(p, 1, sizeof(int));
+
+        status = apr_strtok(valSplit, ", ", &tok_state);
+        while (status != NULL) {
+            ival = atoi(status);
+            if (ap_is_HTTP_VALID_RESPONSE(ival)) {
+                *(int*)apr_array_push(balancer->errstatuses) = ival;
+            }
+            else {
+                return "erroronstatus must be one or more HTTP response code";
+            }
+            status = apr_strtok(NULL, ", ", &tok_state);
+        }
+
+    }
     else {
         return "unknown Balancer parameter";
     }
