@@ -600,7 +600,6 @@ static int proxy_balancer_post_request(proxy_worker *worker,
                                        proxy_server_conf *conf)
 {
 
-#if 0
     apr_status_t rv;
 
     if ((rv = PROXY_THREAD_LOCK(balancer)) != APR_SUCCESS) {
@@ -609,8 +608,20 @@ static int proxy_balancer_post_request(proxy_worker *worker,
             balancer->name);
         return HTTP_INTERNAL_SERVER_ERROR;
     }
-    /* TODO: placeholder for post_request actions
-     */
+
+    if (!apr_is_empty_array(balancer->errstatuses)){
+        int i;
+        for (i = 0; i < balancer->errstatuses->nelts; i++) {
+            int val=((int*)balancer->errstatuses->elts)[i];
+            if (r->status == val) {
+                ap_log_error(APLOG_MARK, APLOG_NOTICE, rv, r->server,
+                    "Detected ErrorOnState (%d) for member (%s). Forcing worker into error state.", val, worker->name);
+                worker->s->status |= PROXY_WORKER_IN_ERROR;
+                worker->s->error_time = apr_time_now();
+                break;
+            }
+        }
+    }
 
     if ((rv = PROXY_THREAD_UNLOCK(balancer)) != APR_SUCCESS) {
         ap_log_error(APLOG_MARK, APLOG_ERR, rv, r->server,
@@ -619,8 +630,6 @@ static int proxy_balancer_post_request(proxy_worker *worker,
     }
     ap_log_error(APLOG_MARK, APLOG_DEBUG, 0, r->server,
                  "proxy_balancer_post_request for (%s)", balancer->name);
-
-#endif
 
     if (worker && worker->s->busy)
         worker->s->busy--;
